# mandelbrot-generator

./: Cargo.toml  LICENSE_MIT  README.md  abundance.py  webpack.config.js
src/: lib.rs
www/: package.json  tsconfig.json  webpack.config.js
www/src/: index.html  index.ts
